exit_lwps, lwp_wait: fix a race condition by re-trying if p_lock was dropped in a case of process exit.  Necessary to re-flag all LWPs for exit, as their state might have changed or new LWPs spawned.

Should fix PR/46168 and PR/46402.